# rs-toxcore-c

./: BUILD.bazel  README.md
apps/: BUILD.bazel
apps/groupbot/: BUILD.bazel  groupbot.tox
apps/groupbot/src/: main.rs  plugin.rs
apps/tests/: compliance_test.rs  persistence_proptest.rs  random_compliance_test.rs  robustness_test.rs
apps/vaultbot/: BUILD.bazel
apps/vaultbot/src/: main.rs
merkle-tox-client/: BUILD.bazel
merkle-tox-client/src/: lib.rs  policy.rs  state.rs
merkle-tox-client/tests/: client_test.rs
merkle-tox-fs/: BUILD.bazel
merkle-tox-fs/benches/: fs_bench.rs
merkle-tox-fs/src/: blob.rs  journal.rs  lib.rs  object_store.rs  opaque.rs  pack.rs  state.rs
merkle-tox-fs/tests/: blob_test.rs  compaction_test.rs  concurrency_test.rs  global_test.rs  journal_test.rs  metadata_test.rs  new_spec_test.rs  node_query_test.rs  node_test.rs  opaque_test.rs  pack_proptest.rs  pack_test.rs  ratchet_test.rs  spec_compliance_test.rs  state_test.rs  storage_ops_test.rs  utils_test.rs
merkle-tox-sqlite/: BUILD.bazel
merkle-tox-sqlite/src/: lib.rs  schema.rs
merkle-tox-sqlite/tests/: blob_fs_test.rs  storage_test.rs
merkle-tox-tox/: BUILD.bazel
merkle-tox-tox/src/: lib.rs
merkle-tox-tox/tests/: bridge_test.rs  integration_test.rs
merkle-tox-workbench/: BUILD.bazel
merkle-tox-workbench/src/: lib.rs  main.rs  model.rs  msg.rs  ui.rs  update.rs
merkle-tox-workbench/tests/: convergence_test.rs  workbench_test.rs
tox-proto/: BUILD.bazel  ENCODING.md
tox-proto-derive/: BUILD.bazel
tox-proto-derive/src/: deserialize.rs  lib.rs  serialize.rs  size.rs
tox-proto/benches/: proto_bench.rs
tox-proto/src/: constants.rs  lib.rs
tox-proto/tests/: array_regression_test.rs  bitflags_test.rs  compare_test.rs  complex_test.rs  efficiency_test.rs  flat_test.rs  forward_compat_test.rs  lib_test.rs
tox-reconcile/: BUILD.bazel
tox-reconcile/benches/: reconcile_bench.rs
tox-reconcile/src/: iblt.rs  lib.rs
tox-reconcile/tests/: reconcile_test.rs
tox-sequenced/: BUILD.bazel
tox-sequenced/benches/: micro_bench.rs  session_bench.rs
tox-sequenced/src/: bitset.rs  error.rs  flat_map.rs  lib.rs  outgoing.rs  protocol.rs  quota.rs  rtt.rs  scheduler.rs  session.rs  time.rs
tox-sequenced/src/congestion/: aimd.rs  bbrv1.rs  bbrv2.rs  cubic.rs  mod.rs
tox-sequenced/src/reassembly/: buffer.rs  mod.rs
tox-sequenced/tests/: ack_merge_test.rs  basic_test.rs  bbr_convergence_test.rs  bbr_fairness_test.rs  bbr_startup_test.rs  bbr_test.rs  bitset_test.rs  buffer_test.rs  cc_proptest.rs  congestion_test.rs  datagram_test.rs  edge_cases_test.rs  flat_map_test.rs  inefficiency_test.rs  memory_overhead_test.rs  nack_test.rs  optimization_test.rs  outgoing_test.rs  packet_format_test.rs  poll_test.rs  priority_test.rs  proptest.rs  protocol_test.rs  quota_isolation_test.rs  quota_test.rs  reassembly_test.rs  robustness_test.rs  rtt_test.rs  sack_overflow_test.rs  scheduler_test.rs  security_optimization_test.rs  security_test.rs  session_test.rs  stress_test.rs  time_sync_test.rs  tlp_test.rs  zero_window_test.rs
toxxi/: BUILD.bazel  README.md
toxxi/benches/: message_send_bench.rs  resize_bench.rs  ui_bench.rs
toxxi/doc/: data-model.md  ux-design.md
toxxi/scripts/: get_smiley.rhai  send_smiley.rhai  test_friend.rhai
toxxi/src/: app.rs  bootstrap.rs  completion.rs  config.rs  emojis.rs  export.rs  io.rs  lib.rs  log_cleaner.rs  main.rs  model.rs  msg.rs  screenshot.rs  script.rs  terminal.rs  tester.rs  time.rs  ui.rs  update.rs  utils.rs  waits.rs  worker.rs
toxxi/src/commands/: account.rs  chat.rs  io.rs  mod.rs  multi_user.rs  system.rs
toxxi/src/testing/: mod.rs
toxxi/src/widgets/: card.rs  command_menu.rs  completion_popup.rs  emoji_grid.rs  emoji_picker.rs  file_transfer.rs  game_card.rs  info_pane.rs  input_box.rs  message_list.rs  mod.rs  oscilloscope.rs  profile_tabs.rs  qr_modal.rs  quick_switcher.rs  sidebar.rs  status_bar.rs  topic_bar.rs
toxxi/tests/: architecture_test.rs  block_test.rs  bootstrap_test.rs  chat_accept_test.rs  command_io_test.rs  command_screenshot_test.rs  completion_test.rs  conference_identity_test.rs  conference_peer_test.rs  config_persistence_test.rs  e2e_test.rs  emoji_test.rs  export_proptest.rs  export_test.rs  file_manager_test.rs  file_persistence_test.rs  file_send_expansion_test.rs  file_transfer_integration_test.rs  file_transfer_interaction_test.rs  file_transfer_kind_test.rs  file_transfer_scroll_test.rs  group_conference_test.rs  group_nick_test.rs  highlight_test.rs  history_persistence_test.rs  history_test.rs  ignore_integration_test.rs  ignore_test.rs  info_command_test.rs  layout_cache_test.rs  log_corruption_test.rs  logs_test.rs  message_splitting_test.rs  model_reconcile_test.rs  model_test.rs  peer_list_test.rs  persistence_proptest.rs  persistence_real_test.rs  persistence_test.rs  qr_test.rs  (+29 more)
toxxi/tests/e2e/: file_transfer.rs  group_chat.rs  large_file_transfer.rs  messaging.rs  mod.rs
toxxi/tests/snapshots/: file_transfer_scroll_test__file_transfer_clip_bottom_1.snap  file_transfer_scroll_test__file_transfer_clip_bottom_2.snap  file_transfer_scroll_test__file_transfer_clip_top_1.snap  file_transfer_scroll_test__file_transfer_clip_top_2.snap  file_transfer_scroll_test__file_transfer_full_visible.snap  file_transfer_scroll_test__game_card_full_visible.snap  ui_golden_test__chat_interaction.snap  ui_golden_test__command_menu_popup.snap  ui_golden_test__emoji_completion.snap  ui_golden_test__emoji_picker_initial.snap  ui_golden_test__emoji_picker_navigated.snap  ui_golden_test__emoji_picker_search_heart.snap  ui_golden_test__emoji_picker_selection_result.snap  ui_golden_test__initial_state.snap  ui_golden_test__input_lorem_ipsum.snap  ui_golden_test__input_lorem_ipsum_sent.snap  ui_golden_test__input_multiline.snap  ui_golden_test__input_multiline_sent.snap  ui_golden_test__multiple_friends.snap  ui_golden_test__popup_completion_position.snap  widgets_command_menu_test__command_menu.snap  widgets_file_transfer_test__file_transfer_card.snap  widgets_game_card_test__game_card.snap  (+26 more)
(+167 files in other folders)
