load("@rules_cc//cc:defs.bzl", "cc_library")
load("@rules_rust//rust:defs.bzl", "rust_clippy", "rust_library", "rust_test")
load("@rules_rust_bindgen//:defs.bzl", "rust_bindgen")

cc_library(
    name = "tox_wrapper",
    hdrs = ["toxcore/src/wrapper.h"],
    deps = ["//c-toxcore"],
)

rust_bindgen(
    name = "tox_bindgen",
    bindgen_flags = [
        "--no-rustfmt-bindings",
        "--default-enum-style=rust",
        "--raw-line=#![allow(non_camel_case_types)]",
        "--raw-line=#![allow(non_upper_case_globals)]",
        "--raw-line=#![allow(non_snake_case)]",
        "--allowlist-function=tox_.*",
        "--allowlist-function=toxav_.*",
        "--allowlist-type=Tox_.*",
        "--allowlist-type=Toxav_.*",
        "--allowlist-var=TOX_.*",
        "--allowlist-var=TOXAV_.*",
    ],
    cc_lib = ":tox_wrapper",
    header = "toxcore/src/wrapper.h",
)

rust_library(
    name = "tox_sys",
    srcs = [":tox_bindgen"],
    edition = "2024",
    visibility = ["//visibility:public"],
    deps = ["//c-toxcore"],
)

genrule(
    name = "toxcore_gen",
    srcs = [
        "//c-toxcore:tox/tox.h",
        "//c-toxcore:tox/tox_events.h",
        "//c-toxcore:tox/tox_log_level.h",
        "//c-toxcore:tox/tox_options.h",
        "//c-toxcore:tox/toxav.h",
        "//c-toxcore:tox/toxencryptsave.h",
    ],
    outs = [
        "toxcore/src/core/generated/mod.rs",
        "toxcore/src/core/generated/av.rs",
        "toxcore/src/core/generated/conference.rs",
        "toxcore/src/core/generated/events.rs",
        "toxcore/src/core/generated/file.rs",
        "toxcore/src/core/generated/friend.rs",
        "toxcore/src/core/generated/group.rs",
        "toxcore/src/core/generated/options.rs",
        "toxcore/src/core/generated/pass_key.rs",
        "toxcore/src/core/generated/tox.rs",
    ],
    cmd = """
        $(location //hs-apigen/tools:apigen) \
            --rs-out $(@D)/toxcore/src/core/generated \
            --rs \
            $(SRCS)
    """,
    tags = ["manual"],
    tools = ["//hs-apigen/tools:apigen"],
)

rust_library(
    name = "toxcore_apigen",
    srcs = [
        "toxcore/src/core/av_dispatch.rs",
        "toxcore/src/core/dispatch.rs",
        "toxcore/src/ffi.rs",
        "toxcore/src/lib.rs",
        "toxcore/src/macros.rs",
        "toxcore/src/tox/conference.rs",
        "toxcore/src/tox/conference_scope.rs",
        "toxcore/src/tox/encryptsave.rs",
        "toxcore/src/tox/events.rs",
        "toxcore/src/tox/file.rs",
        "toxcore/src/tox/friend.rs",
        "toxcore/src/tox/group.rs",
        "toxcore/src/tox/mod.rs",
        "toxcore/src/toxav/mod.rs",
        "toxcore/src/types.rs",
        ":toxcore_gen",
    ],
    edition = "2024",
    tags = ["manual"],
    visibility = ["//visibility:public"],
    deps = [
        ":tox_sys",
        "//c-toxcore",
        "@crates//:serde",
    ],
)

rust_test(
    name = "toxcore_apigen_test",
    srcs = glob(["toxcore/tests/**/*.rs"]),
    aliases = {":toxcore_apigen": "toxcore"},
    args = ["--nocapture"],
    crate_root = "toxcore/tests/integration_test.rs",
    edition = "2024",
    rustc_flags = ["-Clink-arg=-fuse-ld=bfd"],
    tags = ["manual"],
    deps = [":toxcore"],
)

rust_library(
    name = "toxcore",
    srcs = [
        "toxcore/src/core/av.rs",
        "toxcore/src/core/av_dispatch.rs",
        "toxcore/src/core/conference.rs",
        "toxcore/src/core/dispatch.rs",
        "toxcore/src/core/events.rs",
        "toxcore/src/core/iterate_options.rs",
        "toxcore/src/core/file.rs",
        "toxcore/src/core/friend.rs",
        "toxcore/src/core/group.rs",
        "toxcore/src/core/mod.rs",
        "toxcore/src/core/options.rs",
        "toxcore/src/core/pass_key.rs",
        "toxcore/src/core/tox.rs",
        "toxcore/src/ffi.rs",
        "toxcore/src/lib.rs",
        "toxcore/src/macros.rs",
        "toxcore/src/tox/conference.rs",
        "toxcore/src/tox/conference_scope.rs",
        "toxcore/src/tox/encryptsave.rs",
        "toxcore/src/tox/events.rs",
        "toxcore/src/tox/file.rs",
        "toxcore/src/tox/friend.rs",
        "toxcore/src/tox/group.rs",
        "toxcore/src/tox/mod.rs",
        "toxcore/src/toxav/mod.rs",
        "toxcore/src/types.rs",
    ],
    crate_features = ["manual"],
    edition = "2024",
    visibility = ["//visibility:public"],
    deps = [
        ":tox_sys",
        "//c-toxcore",
        "@crates//:serde",
    ],
)

rust_test(
    name = "toxcore_test",
    srcs = glob(["toxcore/tests/**/*.rs"]),
    args = ["--nocapture"],
    crate_root = "toxcore/tests/integration_test.rs",
    edition = "2024",
    rustc_flags = ["-Clink-arg=-fuse-ld=bfd"],
    deps = [":toxcore"],
)

rust_clippy(
    name = "clippy",
    testonly = True,
    deps = [
        ":tox_sys",
        ":toxcore",
        #":toxcore_apigen",
        #":toxcore_apigen_test",
        ":toxcore_test",
    ],
)
