load("@rules_rust//rust:defs.bzl", "rust_clippy", "rust_library", "rust_test")

rust_library(
    name = "merkle-tox-tox",
    srcs = ["src/lib.rs"],
    edition = "2024",
    visibility = ["//visibility:public"],
    deps = [
        "//rs-toxcore-c:toxcore",
        "//rs-toxcore-c/merkle-tox-core",
        "//rs-toxcore-c/tox-proto",
        "//rs-toxcore-c/tox-sequenced",
        "@crates//:hex",
        "@crates//:parking_lot",
        "@crates//:rand",
        "@crates//:serde",
        "@crates//:tokio",
        "@crates//:tracing",
    ],
)

rust_test(
    name = "integration-test",
    timeout = "long",
    srcs = ["tests/integration_test.rs"],
    edition = "2024",
    rustc_flags = ["-Clink-arg=-fuse-ld=bfd"],
    deps = [
        ":merkle-tox-tox",
        "//rs-toxcore-c:toxcore",
        "//rs-toxcore-c/merkle-tox-core",
        "//rs-toxcore-c/merkle-tox-fs",
        "//rs-toxcore-c/tox-proto",
        "@crates//:chrono",
        "@crates//:hex",
        "@crates//:rand",
        "@crates//:tempfile",
        "@crates//:tokio",
        "@crates//:tracing-subscriber",
    ],
)

rust_test(
    name = "bridge-test",
    srcs = ["tests/bridge_test.rs"],
    edition = "2024",
    rustc_flags = ["-Clink-arg=-fuse-ld=bfd"],
    deps = [
        ":merkle-tox-tox",
        "//rs-toxcore-c:toxcore",
        "//rs-toxcore-c/merkle-tox-core",
        "//rs-toxcore-c/merkle-tox-fs",
        "@crates//:tempfile",
        "@crates//:tokio",
        "@crates//:tracing-subscriber",
    ],
)

rust_clippy(
    name = "clippy",
    testonly = True,
    deps = [
        ":merkle-tox-tox",
        ":integration-test",
        ":bridge-test",
    ],
)
